- Corregido tipo de campo fecha y hora al editar los emails enviados. - Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -311,7 +311,7 @@
     "conversion-rate-not-0": "Die Rate Konvertierung kann nicht 0 sein.",
     "convert-into-customer": "In Kunde umwandeln",
     "convert-into-supplier": "In Lieferant umwandeln",
-    "cookies": "Cookies",
+    "cookies": "C",
     "copy": "kopieren",
     "copy-p": "Füllen Sie das Formular aus, um eine Kopie dieses Modells zu erstellen",
     "copy-subaccounts": "Kontenplan kopieren",
@@ -547,7 +547,7 @@
     "error-to-innodb": "Konnte die Tabelle in InnoDB konvertieren.",
     "error-updating-product-stock": "¡Fehler beim Aktualisieren des Artikelbestandes!",
     "errors": "Fehler",
-    "es_EC": "es_EC",
+    "es_EC": "e",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -712,7 +712,7 @@
     "grouping-type": "Gruppierungstyp",
     "groups": "Gruppen",
     "has-attachments": "Tiene adjuntos",
-    "has-parent": "has-parent",
+    "has-parent": "h",
     "hash": "Hash",
     "header": "Cabecera",
     "heading-account-group-id": "Heading-ID-Gruppe",
@@ -777,7 +777,7 @@
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "invalid-iban",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "C",
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -887,7 +887,7 @@
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
-    "lock-invoice": "Rechnung sperren",
+    "lock-invoice": "R",
     "lock-unlock": "sperren-entsperren",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Verschlossen",
@@ -925,7 +925,7 @@
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
-    "march": "Marzo",
+    "march": "M",
     "margin": "Rand",
     "margin-top": "Rand oben",
     "mark-as-homepage": "Als Startseite markieren",
@@ -971,7 +971,7 @@
     "month-11": "Noeviembre",
     "month-12": "Diciembre",
     "month-2": "Febrero",
-    "month-3": "Marzo",
+    "month-3": "M",
     "month-4": "Abril",
     "month-5": "Mayo",
     "month-6": "Juni",
@@ -1141,7 +1141,7 @@
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "PHP-Endsupport",
     "physical-stock": "Physischer Bestand",
-    "picking": "Picking",
+    "picking": "P",
     "plan": "Planen",
     "please-enter-value": "Bitte einen Wert eingeben",
     "plugin": "Plugin",
@@ -1327,7 +1327,7 @@
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Produkt suchen",
     "second-hand": "Z",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "2",
     "second-trimester": "Second trimester",
     "select": "select",
     "select-all": "select-all",
@@ -1335,7 +1335,7 @@
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
-    "selector-number": "Selector",
+    "selector-number": "S",
     "send": "send",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "A",
@@ -1524,11 +1524,11 @@
     "thousands-separator": "Tausende",
     "thursday": "thursday",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "T",
     "time": "Time",
     "timezone": "Wähle Zeitzone aus",
     "title": "Title",
-    "title-font-size": "title-font-size",
+    "title-font-size": "t",
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "A devolver",
@@ -1548,7 +1548,7 @@
     "town": "Stadt, Dorf",
     "tracking-code": "Tracking-Code",
     "transfer": "transfer",
-    "transfers": "transfers",
+    "transfers": "t",
     "transfers-stock": "Transfers stock",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
