--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -926,7 +926,7 @@
     "manufacturer-code": "Codice produttore",
     "manufacturers": "Produttori",
     "march": "Marzo",
-    "margin": "margin",
+    "margin": "margine",
     "margin-top": "Margine superiore",
     "mark-as-homepage": "Segna come homepage",
     "marked-as-homepage": "Contrassegnato come homepage",
@@ -1190,7 +1190,7 @@
     "print-list-of-records": "Stampa l'elenco dei record",
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
-    "printed": "Printed",
+    "printed": "Stampato",
     "printing-format": "printing-format",
     "printing-formats": "Formati di stampa",
     "priority": "priority",
@@ -1324,7 +1324,7 @@
     "save-filter": "Salva Filtro",
     "sdk": "sdk",
     "search": "Ricerca",
-    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-document": "Inserisci il numero di %doctype% per cercare.",
     "search-product": "Cerca prodotto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
@@ -1379,7 +1379,7 @@
     "show": "show",
     "show-balance-graphic": "show-balance-graphic",
     "show-crm-warnings": "Mostrar avisos CRM",
-    "show-expired-receipts": "Mostrar recibos vencidos",
+    "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Show price on print",
@@ -1454,7 +1454,7 @@
     "summary": "Summary",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "sunday",
-    "supplied": "supplied",
+    "supplied": "fornito",
     "supplied-amount": "supplied-amount",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornitore",
@@ -1510,7 +1510,7 @@
     "test": "Test",
     "test-mail-not-implemented": "Il test del controller di posta non è implementato",
     "test-sendmail-not-implemented": "Il test del controllore di posta sendmail non è implementato",
-    "text-color": "Color de texto",
+    "text-color": "Colore del testo",
     "texts": "testi",
     "third-quarter": "3º trimestre",
     "third-trimester": "Third trimester",
@@ -1547,7 +1547,7 @@
     "totals": "Totales",
     "town": "Cittadina",
     "tracking-code": "codice di tracciamento",
-    "transfer": "transfer",
+    "transfer": "trasferimento",
     "transfers": "transfers",
     "transfers-stock": "Transfers stock",
     "translation": "Traducción",
@@ -1609,12 +1609,12 @@
     "value-y": "value-y",
     "values": "values",
     "variables": "Variables",
-    "variant": "Variant",
+    "variant": "Variante",
     "variants": "Varianti",
     "vat": "IVA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "Il numero '%vat-number%' è troppo corto",
     "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
