--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -403,7 +403,7 @@
     "decimals": "Decimais",
     "default": "Default",
     "default-customer": "Cliente Padrão",
-    "default-retention": "default-retention",
+    "default-retention": "retenção-padrão",
     "default-role": "F",
     "default-tax": "default-tax",
     "default-to-company-email": "Por defecto al email de la empresa",
@@ -451,7 +451,7 @@
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "details": "Detalles",
-    "difference": "difference",
+    "difference": "diferença",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
@@ -623,7 +623,7 @@
     "finalize": "finalize",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
-    "finished-cron": "Finalizou a execução do cron do FacturaScripts, tempo transcorrido: %timeNeeded%",
+    "finished-cron": "Cron do FacturaScripts concluído, tempo decorrido: %timeNeeded%",
     "first-quarter": "Primeiro trimestre",
     "first-steps": "f",
     "first-trimester": "First trimester",
@@ -711,7 +711,7 @@
     "group-or-split-p": "grupo-ou-divisão-p",
     "grouping-type": "Tipo de agrupamento",
     "groups": "Grupos",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Tem anexos",
     "has-parent": "Tem pai",
     "hash": "Hash",
     "header": "Cabeçalho",
@@ -728,7 +728,7 @@
     "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
-    "history": "Historial",
+    "history": "Histórico",
     "homepage": "Página inicial",
     "host": "Hospedeiro",
     "hour": "Hora",
@@ -908,11 +908,11 @@
     "long": "Longo",
     "longitude": "Longitude",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Buscar lacunas",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
     "machine": "machine",
-    "machines": "machines",
+    "machines": "máquinas",
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
@@ -1157,7 +1157,7 @@
     "plugin-needs-fs-version": "p",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
     "plugin-order": "O",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "O plugin %pluginName% requer PHP %php% ou superior",
     "plugin-removal-disabled": "plugin-removal-disabled",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "a",
@@ -1455,7 +1455,7 @@
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
     "supplied": "abastecido",
-    "supplied-amount": "supplied-amount",
+    "supplied-amount": "quantidade-fornecida",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornecedor",
     "supplier-account-not-found": "supplier-account-not-found",
@@ -1610,12 +1610,12 @@
     "values": "values",
     "variables": "Variables",
     "variant": "Variant",
-    "variants": "Variants",
+    "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "Registro de VAT",
     "vat-regularization": "VAT Regularization",
@@ -1653,7 +1653,7 @@
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Eventos de trabalho",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
