--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -403,7 +403,7 @@
     "decimals": "Decimais",
     "default": "Default",
     "default-customer": "Cliente Padrão",
-    "default-retention": "default-retention",
+    "default-retention": "retenção-padrão",
     "default-role": "F",
     "default-tax": "default-tax",
     "default-to-company-email": "Por defecto al email de la empresa",
@@ -711,7 +711,7 @@
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Tem anexos",
     "has-parent": "Tem pai",
     "hash": "Hash",
     "header": "Cabeçalho",
@@ -795,7 +795,7 @@
     "invoice-without-acc-entry": "invoice-without-acc-entry",
     "invoiced": "faturado",
     "invoices": "Faturas",
-    "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
+    "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
     "ip-banned": "ip-banned",
     "irpf": "IRPF",
@@ -855,7 +855,7 @@
     "last-month": "last-month",
     "last-price-estimation": "Última precio de presupuesto",
     "last-price-sale": "Último precio de venta",
-    "last-purchase-price": "last-purchase-price",
+    "last-purchase-price": "último-preço-de-compra",
     "last-quarter": "last-quarter",
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
@@ -912,7 +912,7 @@
     "lot": "Muito",
     "low-security": "Baixa Segurança",
     "machine": "machine",
-    "machines": "machines",
+    "machines": "máquinas",
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
@@ -1455,7 +1455,7 @@
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
     "supplied": "supplied",
-    "supplied-amount": "supplied-amount",
+    "supplied-amount": "quantidade-fornecida",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornecedor",
     "supplier-account-not-found": "supplier-account-not-found",
@@ -1610,7 +1610,7 @@
     "values": "values",
     "variables": "Variables",
     "variant": "Variant",
-    "variants": "Variants",
+    "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
@@ -1646,7 +1646,7 @@
     "wildcard-title": "Curingas substituíveis por valor",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
-    "without-groups": "Sin grupo",
+    "without-groups": "Sem grupo",
     "without-regularization": "without-regularization",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
